
Version 1.21.2:
- Fixed a dependency version error for Benchmark::Timer
- Switched to Test::More for better error reporting
- Improved test failure reporting
- Fixed a bug where messages embedded in other messages as RFC 822 attachments
  would be treated as separate emails. (Thanks to Will Fiveash
  <william.fiveash@sun.com> for the bug report.)

Version 1.21.1: Thu Sep 16 2004
- Fixed broken dependency specification in Makefile.PL
- Removed Module::Install extension dependency code from Makefile.PL. (Not
  needed with fixed extensions.)

Version 1.21.0: Wed Sep 15 2004
- Fixed missing file warnings from "make distcheck" resulting from a
  workaround for a MakeMaker bug. (Thanks to Ed Avis <ed.avis@kbcfp.com> for
  the bug report.)
- Dropped force_processing in M::M::Grep (all files treated as text), since
  M::MessageParser detects file types. This fixes a Perl warning issued when
  force_processing is false and M::MessageParser determines that the file is
  text, but it contains a binary character. (Thanks to Jason Brunette 
  <jbrunette@users.sourceforge.net> for the bug report.)
- Updated Makefile.PL to use Module::Install

Version 1.20:
- More robust use of GNU grep to find emails on DOS systems (Thanks to Martin
  Hosken <martin_hosken@sil.org> for the initial patch)
- Fixed an uninitialized value warning in Cache.pm
- Made everything work with DOS-style line endings. Added endline() function
  to return the detected line ending

Version 1.15:
- Now keeps reading the first paragraph until a maximum number of bytes have
  been read. This should help people who use MUAs that add a lot of extra
  header information to the first email in a mailbox. (Thanks to Graham Gough
  <graham@cs.man.ac.uk> for pointing out the problem with VM under Emacs.)

Version 1.14:
- At installation, you no longer have to provide a full path to the external
  programs. (Thanks to Ed Avis <ed.avis@kbcfp.com> for the suggestion.)