@@ -7,6 +7,7 @@ use strict;
 use Test::More;
 use lib 't';
 use Mail::Mbox::MessageParser;
+use Mail::Mbox::MessageParser::Config;
 use Mail::Mbox::MessageParser::Cache;
 use Mail::Mbox::MessageParser::Grep;
 use Mail::Mbox::MessageParser::Perl;
@@ -28,13 +29,17 @@ foreach my $filename (@files)
   SKIP:
   {
     skip('bzip2 not available',1)
-      if $filename =~ /\.bz2$/ && !defined $PROGRAMS{'bzip2'};
+      if $filename =~ /\.bz2$/ &&
+        !defined $Mail::Mbox::MessageParser::Config{'programs'}{'bzip2'};
     skip('bzip not available',1)
-      if $filename =~ /\.bz$/ && !defined $PROGRAMS{'bzip'};
+      if $filename =~ /\.bz$/ &&
+        !defined $Mail::Mbox::MessageParser::Config{'programs'}{'bzip'};
     skip('gzip not available',1)
-      if $filename =~ /\.gz$/ && !defined $PROGRAMS{'gzip'};
+      if $filename =~ /\.gz$/ &&
+        !defined $Mail::Mbox::MessageParser::Config{'programs'}{'gzip'};
     skip('tzip not available',1)
-      if $filename =~ /\.tz$/ && !defined $PROGRAMS{'tzip'};
+      if $filename =~ /\.tz$/ &&
+        !defined $Mail::Mbox::MessageParser::Config{'programs'}{'tzip'};
 
     TestImplementation($filename,0,0);
   }
