@@ -6,12 +6,13 @@ use strict;
 
 use Test::More;
 use lib 't';
+use Test::Utils;
 use Mail::Mbox::MessageParser;
+use Mail::Mbox::MessageParser::Config;
 use Mail::Mbox::MessageParser::Cache;
 use Mail::Mbox::MessageParser::Grep;
 use Mail::Mbox::MessageParser::Perl;
 use File::Spec::Functions qw(:ALL);
-use Test::Utils;
 use FileHandle;
 
 eval 'require Storable;';
@@ -41,7 +42,7 @@ foreach my $filename (@files)
   SKIP:
   {
     skip('GNU grep not available',1)
-      unless defined $Mail::Mbox::MessageParser::PROGRAMS{'grep'};
+      unless defined $Mail::Mbox::MessageParser::Config{'programs'}{'grep'};
 
     TestImplementation($filename,0,1);
   }
