@@ -5,6 +5,7 @@ use strict;
 use Test::More;
 use lib 't';
 use Mail::Mbox::MessageParser;
+use Mail::Mbox::MessageParser::Config;
 use Mail::Mbox::MessageParser::Cache;
 use Mail::Mbox::MessageParser::Grep;
 use Mail::Mbox::MessageParser::Perl;
@@ -39,7 +40,7 @@ foreach my $filename (keys %tests)
   SKIP:
   {
     skip('Skip GNU grep not available',1)
-      unless defined $Mail::Mbox::MessageParser::PROGRAMS{'grep'};
+      unless defined $Mail::Mbox::MessageParser::Config{'programs'}{'grep'};
 
     TestImplementation($filename,$tests{$filename},0,1);
   }
